# brim

./: .gitignore  CLAUDE.md  CODERULES.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
.lore/: README.md  lore.toml
.lore/adrs/: ADR-001-sub-agent-tree-from-claude-transcript-layout.md  ADR-002-point-in-time-window-over-cumulative-aggregate.md  ADR-003-standalone-tool-rather-than-ctop-subcommand.md  ADR-004-snapshot-persistence-belongs-to-the-consumer-not-brim.md  ADR-005-opencode-point-in-time-window-from-step-finish-with-aggregate-fallback.md  ADR-006-velocity-and-overbound-projection-from-a-bounded-last-k-tail-read.md  ADR-007-subtree-health-aggregation-over-the-agent-tree.md  ADR-008-cache-hit-ratio-as-a-context-thrash-signal.md  ADR-009-recycle-target-selection-and-blast-radius.md  ADR-010-recycle-threshold-absolute-effective-budget-over-advertised-window-ratio.md  ADR-011-brim-reasons-in-absolute-tokens-only-drop-advertised-window-limit-and-capacity-readout.md  ADR-012-machine-readable-diagnostic-output-is-absolute-tokens-only-no-limitfillpercent.md  ADR-013-story-004-slim-json-drop-trendpoints-drop-generatedat-shorten-nested-keys-skip-nulls.md  ADR-014-brim-v010-release-mit-license-cratesio-metadata-router-readme.md  ADR-015-opencode-z-aiglm-52-context-limit-is-1000000-supersede-adr-005-200k-assumption.md  (+16 more)
docs/: os-compatibility.md  provider-capability-matrix.md  recycle-research-findings.md  recycle-verdict-model.md
src/: claude.rs  codex.rs  copilot.rs  main.rs  model.rs  opencode.rs  output.rs  parser.rs  provider.rs  verdict.rs  window.rs
(+45 files in other folders)
