[package]
name = "brim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rusqlite+ bundled: read-only access to the opencode SQLite transcript DB.
# stdlib has no sqlite; bundling avoids a system libsqlite3 dependency (CODERULES r2 deterministic).
rusqlite = { version = "0.32", features = ["bundled"] }
